--- a/index.html
+++ b/index.html
@@ -1,92 +1,27 @@
-<!doctype html>
-<html lang="en-us">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Hangman-Game</title>
- 
-  <script type="text/javascript" src="assets/javascript/game.js"></script>
   
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-<!-- Latest compiled and minified CSS -->
- 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-  <!-- Latest compiled and minified JavaScript -->
-
+  <title>Hangman-Game</title>
+  
+  <script type="text/javascript" language = "JavaScript" src="assets/javascript/game.js"></script>
+  
 </head>
 
 <body>
 
+  <div>"Palabra Mostrada wordCo"</div>
+  <h1 id="wShow"></h1>
+  <hr>
+  <div>"Letras Fallidas"</div>
+  <h1 id="faultCnt"></h1>
+  <hr>
 
 
 
-    <div class="container"> 
-      <div class="colors">
-        <nav class="navbar navbar-default" role="navigation" style="border-radius:0px;">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span> 
-              </button>
-              <a class="navbar-brand" href="#" id="logo" >M. Del Solar</a>
-            </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="index.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li> 
-                <li><a href="portfolio.html">Portfolio</a></li> 
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
-     
  
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-8">
-          <section class="main-section">
-            <h1 id="About">About Me</h1>
 
-            <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
-
-            <p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
-
-            <p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
-
-          </section>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-4">
-          <section class="sidebar">
-            <div id="connect">
-              <h2 id="About">Connect with Me</h2>
-
-              <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-              <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-              <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-            </div>
-          </section>        
-        </div>
-      </div>
-    </div>
-
-
-  
-
-  <footer>
-    <div class="container">
-      Copyright &copy; 2016 Marcelo Del Solar
-    </div>
-  </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
-
 </html>
