--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <div>"Palabra Mostrada wordCo"</div>
   <h1 id="wShow"></h1>
   <hr>
-  <div>"Letras Fallidas"</div>
+  <div>"Letras Fallidas faultCnt"</div>
   <h1 id="faultCnt"></h1>
   <hr>
-
+  <div>"Letras Fallidas letterAlGuess"</div>
+  <h1 id="letterAlGues"></h1>
+  <hr>
 
 
  
