--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <div>"Letras Fallidas letterAlGuess"</div>
   <h1 id="letterAlGues"></h1>
   <hr>
-
+  <div>"Ganadas wins"</div>
+  <h1 id="wins"></h1>
+  <hr>
 
  
 
