--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
   <meta charset="UTF-8">
   
   <title>Hangman-Game</title>
+
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
   
   <script type="text/javascript" language = "JavaScript" src="assets/javascript/game.js"></script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<!-- Latest compiled and minified CSS -->
+ 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
   
 </head>
 
@@ -19,13 +33,16 @@
   <h1 id="faultCnt"></h1>
   <hr>
   <div>"Letras Fallidas letterAlGuess"</div>
-  <h1 id="letterAlGues"></h1>
-  <hr>
-  <div>"Ganadas wins"</div>
-  <h1 id="wins"></h1>
+  <h1 href="#" class="alert-link" id="letterAlGues"></h1>
   <hr>
 
  
 
+
+  <h1><a href="#">Ganadas wins <span id="wins" class="badge">0</span></a></h1>
+
+ 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
