--- a/index.html
+++ b/index.html
@@ -20,26 +20,52 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Orbitron:700" rel="stylesheet">
+
 
   
 </head>
 
 <body>
 
-  <div>"Palabra Mostrada wordCo"</div>
-  <h1 id="wShow"></h1>
-  <hr>
-  <div>"Letras Fallidas faultCnt"</div>
-  <h1 id="faultCnt"></h1>
-  <hr>
-  <div>"Letras Fallidas letterAlGuess"</div>
-  <h1 href="#" class="alert-link" id="letterAlGues"></h1>
-  <hr>
-
- 
+	 <div class="cont" >
+	  
+	  <div id="logo1">Galaxy</div>
 
 
-  <h1><a href="#">Ganadas wins <span id="wins" class="badge">0</span></a></h1>
+
+	  <div class="format1">Find the Constellations</div>
+	  <h1 id="wShow" class="format3"></h1>
+	  <hr>
+
+
+	  <div class="row format2">
+	                <div class="col-xs-12 col-sm-6 col-md-6">
+						  <div>"Letras Fallidas faultCnt"</div>
+						  <h1 id="faultCnt"></h1>
+	                </div>
+	                <div class="col-xs-12 col-sm-6 col-md-6 ">
+						  <div>"Letras Fallidas letterAlGuess"</div>
+						  <h1 href="#" class="alert-link" id="letterAlGues"></h1>
+	                </div>
+	  </div>
+
+	  
+	  <div class="row format4">
+	    
+	    <div class="col-xs-12 col-sm-6 col-md-6">
+			<img src="assets/images/maxresdefault.JPG" id="foto1">
+	    </div>  	
+	    
+	    <div class="col-xs-12 col-sm-6 col-md-6">
+			<h1><a href="#" class="format3">Ganadas wins <span id="wins" class="badge">0</span></a></h1>
+
+	    </div>
+	  </div>
+	 
+
+	 </div>
+
 
  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
