--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
 	  <div class="row format2">
 	                <div class="col-xs-12 col-sm-6 col-md-6">
-						  <div>"Letras Fallidas faultCnt"</div>
+						  <div>Number of Guesses Remaiing</div>
 						  <h1 id="faultCnt"></h1>
 	                </div>
 	                <div class="col-xs-12 col-sm-6 col-md-6 ">
-						  <div>"Letras Fallidas letterAlGuess"</div>
+						  <div>"Letter Already Guessed"</div>
 						  <h1 href="#" class="alert-link" id="letterAlGues"></h1>
 	                </div>
 	  </div>
@@ -58,7 +58,7 @@
 	    </div>  	
 	    
 	    <div class="col-xs-12 col-sm-6 col-md-6">
-			<h1><a href="#" class="format3">Ganadas wins <span id="wins" class="badge">0</span></a></h1>
+			<h1><a href="#" class="format3">Wins <span id="wins" class="format3">0</span></a></h1>
 
 	    </div>
 	  </div>
