--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	  <div id="logo1">Galaxy</div>
 
 
+	  <div class="format5">Press any key to get started!</div>
 
 	  <div class="format1">Find the Constellations</div>
 	  <h1 id="wShow" class="format3"></h1>
@@ -46,19 +47,21 @@
 	                </div>
 	                <div class="col-xs-12 col-sm-6 col-md-6 ">
 						  <div>"Letter Already Guessed"</div>
-						  <h1 href="#" class="alert-link" id="letterAlGues"></h1>
+						  <h1 id="letterAlGues"></h1>
 	                </div>
 	  </div>
 
 	  
-	  <div class="row format4">
+	  <div class="row format8">
 	    
-	    <div class="col-xs-12 col-sm-6 col-md-6">
+	    <div class="col-xs-12 col-sm-6 col-md-6 fomat6">
 			<img src="assets/images/maxresdefault.JPG" id="foto1">
 	    </div>  	
 	    
-	    <div class="col-xs-12 col-sm-6 col-md-6">
-			<h1><a href="#" class="format3">Wins <span id="wins" class="format3">0</span></a></h1>
+	    <div class="col-xs-12 col-sm-6 col-md-6 format6">
+			<div class="format6">Wins</div>
+			<h1 id="wins" class="format7">0</h1>
+			
 
 	    </div>
 	  </div>
