--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		  <div class="row format8">
 		    
 		    <div class="col-xs-12 col-sm-6 col-md-6 format10">
-				<img src="assets/images/maxresdefault.jpgs" id="foto1">
+				<img src="assets/images/maxresdefault.jpg" id="foto1">
 		    </div>  	
 		    
 		    <div class="col-xs-12 col-sm-6 col-md-6 ">
